[gd_scene load_steps=3 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://UI/HUD.gd" type="Script" id=2]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="DashCounter" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Container" type="Container" parent="DashCounter"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -140.0
margin_top = -70.0
margin_right = -70.0

[node name="HBoxContainer" type="HBoxContainer" parent="DashCounter/Container"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Dash1" type="TextureRect" parent="DashCounter/Container/HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
texture = ExtResource( 1 )

[node name="Dash2" type="TextureRect" parent="DashCounter/Container/HBoxContainer"]
margin_left = 68.0
margin_right = 132.0
margin_bottom = 64.0
texture = ExtResource( 1 )
